# publish-helper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FORK_PROPOSAL.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml
docs/: DEVELOPMENT.md  requirements_api.txt
lib_deb/: entrypoint
src/: main_api_new.py  main_gui_new.py
src/config/: __init__.py  settings.py
src/core/: settings_tool.py
src/utils/: exceptions.py  file_utils.py  logger.py
tests/: __init__.py  test_config.py  test_utils.py
